--- a/src/components/globals/Header.astro
+++ b/src/components/globals/Header.astro
@@ -6,19 +6,19 @@ const menu = [
    },
    {
     title: 'Work',
-    href: '/work'
+    href: '/career.html'
    },
    {
     title: 'About Us',
-    href: '/about-us'
+    href: '/about-us.html'
    },
    {
     title: 'Services',
-    href: '/services'
+    href: '/services.html'
    },
    {
     title: 'Contact Us',
-    href: '/contact-us'
+    href: '/contact-us.html'
    }
 ]
 const { pathname } = Astro.url;
