--- a/src/styles/components/_career.scss
+++ b/src/styles/components/_career.scss
@@ -18,9 +18,28 @@
                 @apply font-light text-black text-sm leading-[1.4] font-text;
             }
             .view-now {
-                @apply font-text text-[10px] text-black font-normal tracking-[0.3em] uppercase absolute bottom-[-10px] right-0 hover:text-[#BADF01];
+                @apply font-text text-[10px] text-black font-normal tracking-[0.3em] uppercase absolute bottom-[-5px] right-0 hover:text-[#BADF01] flex items-center gap-x-2 transition-all duration-300;
                 span {
                     @apply underline underline-offset-[3px] decoration-1;
+                }
+                .icon-arrow-up {
+                    text-decoration: none;
+                    width: 26px;
+                    height: 26px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 50%;
+                    background-color: #BADF01;
+                    color: #000;
+                    font-size: 10px;
+                    position: relative;
+                    &:before {
+                        position: absolute;
+                        top: 50%;
+                        left: 55%;
+                        transform: translate(-50%, -50%);
+                    }
                 }
             }
         }
@@ -37,6 +56,14 @@
     border-radius: 20px;
     padding: 0;
     overflow: hidden;
+    position: relative;
+    display: none;
+    .is-close-btn {
+        top: 25px !important;
+        right: 25px !important;
+        color: #717171 !important;
+        opacity: 1 !important;
+    }
     .modal-header {
         background-color: #000;
         padding: 33px 40px 40px;
