--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,7 @@ const { title } = Astro.props;
 		<link href="./css/fonts.css" rel="stylesheet" />
 		<link href="./css/fancybox.css" rel="stylesheet" />
 		<link href="./css/owl.carousel.css" rel="stylesheet" />
+		<link href="./vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 		<link href="./css/select2.min.css" rel="stylesheet" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
