--- a/src/components/sections/worldWork.astro
+++ b/src/components/sections/worldWork.astro
@@ -1,25 +1,31 @@
-<section class="world-work lg:pt-[140px] pt-[100px] pb-12 flex flex-col">
-    <div class="inside mb-5">
+<section class="world-work lg:pt-[120px] pt-[100px] pb-12 flex flex-col relative overflow-hidden">
+    <div class="inside">
         <div class="world-world-horizontal">
             <img src="/images/title/worlds-work.png" alt="World Work">
         </div>
-        <div class="backdrop">
-        </div>
+        <div class="backdrop"></div>
         <div class="sequence-wrapper">
             <canvas id="sequence-canvas"></canvas>
         </div>
     </div>
-    <div class="container mt-auto">
+
+    <div class="container">
         <div class="grid grid-cols-4 text-[28px] text-white [&_span]:text-[#BADF01] [&>*]:px-6 [&>*]:py-8 border border-[#2D2E2E] [&>*]:border-r-[#2D2E2E] [&>*]:border-r [&>*:last-child]:border-r-0 [&>a:hover]:text-[#000] [&>a:hover]:bg-[#BADF01] [&>a]:transition-all [&>a]:duration-300 [&>a:hover>span]:text-[#fff] [&>*]:items-center">
             <div class="md:col-span-2 col-span-4">
-                <p>We create <span>special</span>, <span>stories</span>, and <span>worlds</span> that turn <span>brands</span> into <span>experiences</span> and <span>culture</span>. <br/>Built to be played.</p>
+                <p>
+                    We create <span>special</span>, <span>stories</span>, and <span>worlds</span> 
+                    that turn <span>brands</span> into <span>experiences</span> and <span>culture</span>. <br/>
+                    Built to be played.
+                </p>
             </div>
-            <a href="#" target="_blank" class="md:col-span-1 sm:col-span-2 col-span-4 flex gap-2 leading-none md:border-t-[transparent] border-t border-[#2D2E2E]">See Our Work <span class="icon-arrow-up text-xl ml-auto"></span></a>
-            <a href="#" target="_blank" class="md:col-span-1 sm:col-span-2 col-span-4 flex gap-2 leading-none md:border-t-[transparent] border-t border-[#2D2E2E]">Our Services <span class="icon-arrow-up text-xl ml-auto"></span></a>
+            <a href="#" target="_blank" class="md:col-span-1 sm:col-span-2 col-span-4 flex gap-2 leading-none md:border-t-[transparent] border-t border-[#2D2E2E]">
+                See Our Work <span class="icon-arrow-up text-xl ml-auto"></span>
+            </a>
+            <a href="#" target="_blank" class="md:col-span-1 sm:col-span-2 col-span-4 flex gap-2 leading-none md:border-t-[transparent] border-t border-[#2D2E2E]">
+                Our Services <span class="icon-arrow-up text-xl ml-auto"></span>
+            </a>
         </div>
     </div>
-    <!-- <div class="reveal-overlay"></div>  -->
-   
-    
-</section>
 
+    <div class="reveal-overlay absolute inset-0 bg-[#BADF01] z-20"></div>
+</section>
