--- a/src/pages/our-work.astro
+++ b/src/pages/our-work.astro
@@ -3,37 +3,40 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Career">
-    <div class="page-heading min-h-[456px] pt-[144px] pb-[100px] bg-black z-10 relative bg-cover bg-center bg-no-repeat" style="background-image: url('/images/heading-banner.png');">
+    <div class="page-heading md:min-h-[456px] min-h-[300px] pt-[144px] md:pb-[100px] pb-[50px] bg-black z-10 relative bg-cover bg-center bg-no-repeat" style="background-image: url('/images/heading-banner.png');">
         <div class="container relative z-30">
             <div class="text-center text-white">
-                <h1 class="page-heading-title mt-12 font-anton text-[237px] tracking-[-0.06em]">OUR WORK</h1>
+                <h1 class="page-heading-title mt-12 font-anton xl:text-[237px] lg:text-[160px] text-[70px] tracking-[-0.06em]">OUR WORK</h1>
             </div>
         </div>
-        <div class="tamagochi absolute bottom-0 left-1/2 -translate-x-1/2 translate-y-[20%] z-20">
+        <div class="tamagochi absolute bottom-0 left-1/2 -translate-x-1/2 translate-y-[20%] z-20 lg:max-w-full md:max-w-[320px] max-w-[200px]">
             <img src="/images/ourwork-console.png" alt="">
         </div>
     </div>
     <div class="ourwork-list">
-        <div class="ourwork-item" style="background-image: url('/images/ourwork-1.png');">
-            <div class="container flex flex-wrap gap-10 items-start">
-                <h3 class="ourwork-title text-display text-[70px] font-bold text-white">Faryngrove <span class="icon-arrow-up"></span></h3>
-                <div class="ourwork-content max-w-[362px] ml-auto text-white leading-[1.4] text-right">
+        <div class="ourwork-item relative" style="background-image: url('/images/ourwork-1.png');">
+            <a href="#" class="ourwork-link"></a>
+            <div class="container flex flex-wrap md:gap-10 gap-5 items-start md:relative sticky md:top-0 top-[144px]">
+                <h3 class="ourwork-title text-display lg:text-[70px] text-[50px] font-bold text-white">Faryngrove <span class="icon-arrow-up"></span></h3>
+                <div class="ourwork-content lg:max-w-[362px] ml-auto text-white leading-[1.4] lg:text-right">
                     <p>A fantastical open-world map set on an intricately designed floating island. Explore hidden easter eggs and captivating landmarks scattered throughout this immersive environment, crafted exclusively for Fortnite players.</p>
                 </div>
             </div>
         </div>
-        <div class="ourwork-item" style="background-image: url('/images/ourwork-1.png');">
-            <div class="container flex flex-wrap gap-10 items-start">
-                <h3 class="ourwork-title text-display text-[70px] font-bold text-white">Faryngrove <span class="icon-arrow-up"></span></h3>
-                <div class="ourwork-content max-w-[362px] ml-auto text-white leading-[1.4] text-right">
+        <div class="ourwork-item relative" style="background-image: url('/images/ourwork-1.png');">
+            <a href="#" class="ourwork-link"></a>
+            <div class="container flex flex-wrap md:gap-10 gap-5 items-start md:relative sticky md:top-0 top-[144px]">
+                <h3 class="ourwork-title text-display lg:text-[70px] text-[50px] font-bold text-white">Faryngrove <span class="icon-arrow-up"></span></h3>
+                <div class="ourwork-content lg:max-w-[362px] ml-auto text-white leading-[1.4] lg:text-right">
                     <p>A fantastical open-world map set on an intricately designed floating island. Explore hidden easter eggs and captivating landmarks scattered throughout this immersive environment, crafted exclusively for Fortnite players.</p>
                 </div>
             </div>
         </div>
-        <div class="ourwork-item" style="background-image: url('/images/ourwork-1.png');">
-            <div class="container flex flex-wrap gap-10 items-start">
-                <h3 class="ourwork-title text-display text-[70px] font-bold text-white">Faryngrove <span class="icon-arrow-up"></span></h3>
-                <div class="ourwork-content max-w-[362px] ml-auto text-white leading-[1.4] text-right">
+        <div class="ourwork-item relative" style="background-image: url('/images/ourwork-1.png');">
+            <a href="#" class="ourwork-link"></a>
+            <div class="container flex flex-wrap md:gap-10 gap-5 items-start md:relative sticky md:top-0 top-[144px]">
+                <h3 class="ourwork-title text-display lg:text-[70px] text-[50px] font-bold text-white">Faryngrove <span class="icon-arrow-up"></span></h3>
+                <div class="ourwork-content lg:max-w-[362px] ml-auto text-white leading-[1.4] lg:text-right">
                     <p>A fantastical open-world map set on an intricately designed floating island. Explore hidden easter eggs and captivating landmarks scattered throughout this immersive environment, crafted exclusively for Fortnite players.</p>
                 </div>
             </div>
