--- a/src/styles/components/_worldWork.scss
+++ b/src/styles/components/_worldWork.scss
@@ -57,18 +57,10 @@
             height: 100vh;
             max-height: calc((var(--vh, 1vh) * 100 ) - 300px);
             max-width: fit-content;
+           @media (min-height: 1000px) {
+            max-height: calc((var(--vh, 1vh) * 100 ) - 600px);
+           }
         }
     }
 }
 
-.reveal-overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #BADF01; /* màu giống trong ảnh */
-    transform: translateY(100%);
-    z-index: 5;
-    pointer-events: none;
-  }
