--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,6 +52,7 @@ section {
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        background-attachment: fixed;
     }
     .box-content {
         @media (max-width: 1200px) {
@@ -189,7 +190,7 @@ section {
                         content: '';
                         background-image: url('/images/0' + $i + '.svg');
                         background-size: contain;
-                        background-position: center;
+                        background-position: top left;
                         background-repeat: no-repeat;
                         width: 100px;
                         height: 100px;
@@ -272,6 +273,114 @@ section {
             }
             &.white {
                 color: #fff;
+            }
+        }
+    }
+}
+.project-carousel {
+   .owl-stage-outer {
+        overflow: visible;
+    }
+    .owl-nav {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        [type="button"] {
+            height: 88px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 32px !important;
+            border: solid 1px #373737 !important;
+            position: relative;
+            &:before {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: 0;
+                background-color: #191919;
+                transition: all 0.3s ease;
+                content: '';
+            }
+            .icon-arrow-left {
+                position: relative;
+                z-index: 2;
+                font-family: 'icomoon' !important;
+                height: 32px;
+                width: 37px;
+                &:before,
+                &:after {
+                    position: absolute;
+                    transition: transform 0.4s ease, opacity 0.4s ease;
+                }
+                &:before {
+                    transform: translateX(0);
+                    opacity: 1;
+                    
+                }
+                &:after {
+                    transform: translateX(-30px);
+                    opacity: 0;
+                    color: #BADF01;
+                    content: "\e901";
+                }
+            }
+            .icon-arrow-right {
+                position: relative;
+                z-index: 2;
+                font-family: 'icomoon' !important;
+                height: 32px;
+                width: 37px;
+                &:before,
+                &:after {
+                    position: absolute;
+                    transition: transform 0.4s ease, opacity 0.4s ease;
+                }
+                &:before {
+                    transform: translateX(0px);
+                    opacity: 1;
+                    
+                }
+                &:after {
+                    transform: translateX(-30px);
+                    opacity: 0;
+                    color: #BADF01;
+                    content: "\e902";
+                }
+            }
+            &:last-child {
+                border-left: none !important;
+            }
+            &:hover {
+                &:before {
+                    height: 100%;
+                }
+                .icon-arrow-left {
+                    position: relative;
+                    z-index: 2;
+                    font-family: 'icomoon' !important;
+                    &:before {
+                        transform: translateX(30px);
+                        opacity: 0;
+                    }
+                    &:after {
+                        transform: translateX(0);
+                        opacity: 1;
+                    }
+                }
+                .icon-arrow-right {
+                    position: relative;
+                    z-index: 2;
+                    font-family: 'icomoon' !important;
+                    &:before {
+                        transform: translateX(-30px);
+                        opacity: 0;
+                    }
+                    &:after {
+                        transform: translateX(0);
+                        opacity: 1;
+                    }
+                }
             }
         }
     }
@@ -402,16 +511,31 @@ section {
     position: relative;
     z-index: 2;
     background-color: #fff;
-    padding-top: 200px;
+    padding-top: 100px;
+    @media (min-width: 1024px) {
+        padding-top: 200px;
+    }
     .ourwork-item {
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         padding: 70px 0;
-       height: calc(var(--vh, 1vh) * 100);
-       display: flex;
-       align-items: flex-start;
-       line-height: 1;
+        height: calc(var(--vh, 1vh) * 100);
+        display: flex;
+        align-items: flex-start;
+        line-height: 1;
+        .ourwork-link {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+        @media (max-width: 768px) {
+            padding: 30px 0;
+            height: 70vh;
+        }
        .ourwork-title {
             line-height: 1;
             font-family: 'HelveticaNowDisplay';
@@ -430,6 +554,145 @@ section {
             justify-content: center;
             color: #000;
             font-size: 16px;
+            @media (max-width: 768px) {
+                width: 24px;
+                height: 24px;
+                font-size: 12px;
+            }
        }
+    }
+}
+.post-content {
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        z-index: 0;
+        
+        background-image: url('../images/post-content-bg.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        @media (min-width: 1024px) {
+            max-height: 850px;
+        }
+        @media (max-width: 1023px) {
+            max-height: 500px;
+        }
+    }
+    > * {
+        position: relative;
+        z-index: 1;
+    }
+}
+.post-stage-list {
+    .post-stage-item {
+        .post-stage-gallery {
+            padding-top: 75px;
+            @media (max-width: 1023px) {
+                padding-top: 30px;
+            }
+        }
+        .post-stage-content {
+            padding: 75px 0 47px;
+            max-width: 1100px;
+            margin: 0 auto;
+            @media (max-width: 1023px) {
+                padding: 30px 0px;
+            }
+            .post-stage-content-title {
+                position: relative;
+                @media (max-width: 1023px) {
+                    font-size: 16px;
+                    padding-left: 20px;
+                }
+                &:before {
+                    content: '';
+                    width: 24px;
+                    height: 24px;
+                    border-radius: 50%;
+                    background-color: #BADF01;
+                    position: absolute;
+                    top: -3px;
+                    left: 0;
+                    transform: translate(calc(-100% - 29px), -0%);
+                    @media (max-width: 1023px) {
+                        transform: translate(0, -0%);
+                        width: 12px;
+                        height: 12px;
+                        top: 2px;
+                    }
+                }
+            }
+        }
+    }
+    .game-feature {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 14px;
+        > * {
+            font-family: 'Inter', sans-serif;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #000;
+            background-color: #BADF01;
+            padding: 4px 19px;
+            border-radius: 40px;
+        }
+    }
+    .post-stage-carousel__main {
+        img {
+            border-radius: 15px;
+        }
+    }
+    .post-stage-carousel__thumb {
+        position: relative;
+        .owl-stage-outer {
+            &::before,
+            &::after {
+                content: '';
+                position: absolute;
+                height: 100%;
+                width: 122px;
+                z-index: 2;
+                top: 0;
+            }
+            &:before {
+                left: 0;
+                transform: translateX(-30%);
+                background: linear-gradient(90deg, #fff 30%, rgba(255, 255, 255, 0) 100%);
+            }
+            &:after {
+                right: 0;
+                background: linear-gradient(90deg, rgba(255, 255, 255, 0) 30%, #fff 100%);
+            }
+            img {
+                border-radius: 12px;
+            }
+        }
+        .owl-dots {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            gap: 5px 10px;
+            margin: 47px 0 0;
+            padding-bottom: 100px;
+            button {
+                width: 13px;
+                height: 13px;
+                background-color: #D9D9D9;
+                border-radius: 50%;
+                &.active {
+                    background-color: #BADF01;
+                }
+            }
+        }
+      
     }
 }
