--- a/src/components/sections/worldWork.astro
+++ b/src/components/sections/worldWork.astro
@@ -27,5 +27,5 @@
         </div>
     </div>
 
-    <div class="reveal-overlay absolute inset-0 bg-[#BADF01] z-20"></div>
+    <div class="reveal-overlay absolute inset-0 bg-[#BADF01] z-20 md:opacity-100 opacity-0"></div>
 </section>
