--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -292,6 +292,10 @@ section {
             font-size: 32px !important;
             border: solid 1px #373737 !important;
             position: relative;
+            @media (max-width: 768px) {
+                height: 60px;
+                font-size: 24px !important;
+            }
             &:before {
                 position: absolute;
                 bottom: 0;
@@ -308,10 +312,15 @@ section {
                 font-family: 'icomoon' !important;
                 height: 32px;
                 width: 37px;
+                @media (max-width: 768px) {
+                    height: 27px;
+                    font-size: 24px !important;
+                }
                 &:before,
                 &:after {
                     position: absolute;
                     transition: transform 0.4s ease, opacity 0.4s ease;
+                    left: 0;
                 }
                 &:before {
                     transform: translateX(0);
@@ -331,10 +340,15 @@ section {
                 font-family: 'icomoon' !important;
                 height: 32px;
                 width: 37px;
+                @media (max-width: 768px) {
+                    height: 27px;
+                    font-size: 24px !important;
+                }
                 &:before,
                 &:after {
                     position: absolute;
                     transition: transform 0.4s ease, opacity 0.4s ease;
+                    left: 0;
                 }
                 &:before {
                     transform: translateX(0px);
